--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -287,3 +287,9 @@
     background: var(--dark);
     border-color: var(--primary);
 }
+
+pre {
+    background-color: #000;
+    color: #FFF;
+    padding: 1em;
+}
