Handle mass trigger ajax errors so the close button shows up
Increase the ajax timeout for mass trigger
Adjust the font color to an off white for visibility

--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -2,8 +2,12 @@
 :root {
     --primary: #EB1616;
     --secondary: #191C24;
-    --light: #6C7293;
+    --light: #F8F0E3;
     --dark: #000000;
+}
+
+td, span, div {
+    color: var(--light);
 }
 
 .back-to-top {
