Fix restore groups button showing up sometimes on initial load

--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -361,3 +361,12 @@ pre {
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+
+.no-sort::after { 
+    display: none !important; 
+}
+
+.no-sort { 
+    pointer-events: none !important; 
+    cursor: default !important; 
+}
