--- a/root/app/www/public/scss/bootstrap.scss
+++ b/root/app/www/public/scss/bootstrap.scss
@@ -25,6 +25,8 @@ $border-color: $dark;
 
 $input-border-color: $border-color;
 
+$input-disabled-border-color: $border-color;
+
 $nav-tabs-border-color: $border-color;
 
 $nav-tabs-link-hover-border-color: $border-color;
@@ -32,6 +34,8 @@ $nav-tabs-link-hover-border-color: $border-color;
 $nav-tabs-link-active-border-color: $border-color;
 
 $input-bg: $dark;
+
+$input-disabled-bg: $dark;
 
 $list-group-color: $body-color;
 
