--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -383,10 +383,13 @@ pre {
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
     background-color: var(--dark) !important;
+    width: 4px !important;
+    height: 4px !important;
 }
 
 ::-webkit-scrollbar {
     width: 4px !important;
+    height: 4px !important;
     background-color: var(--secondary) !important;
 }
 
