Add base themes
nzcool, nzdark, nzlight

Swapped monospace font to JetBrains Mono

Make `pre` use the monospace font

Adjust loading-modal hide timeout because it would hang sometimes when loading huge logs.

Adjusted stylesheet header to use base theme

Added `themes by nzxl` to footer

Added utility class `text-uppercase`

Set default theme to nzblack

Added nzxl.space logo svg

Adjustments

Add bg-gray class to theme

LICENSE

--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -157,9 +157,9 @@ a {
         margin-bottom: 0px;
     }
     #container-button-row {
-        z-index: 998; 
-        width: 88% !important; 
-        position: fixed; 
+        z-index: 998;
+        width: 88% !important;
+        position: fixed;
         top: 145px;
     }
 }
@@ -169,9 +169,9 @@ a {
         margin-bottom: 15px;
     }
     #container-button-row {
-        z-index: 998; 
-        width: 72% !important; 
-        position: fixed; 
+        z-index: 998;
+        width: 72% !important;
+        position: fixed;
         top: 130px;
     }
 }
@@ -381,4 +381,8 @@ pre {
 
 .breadcrumb > li + li:before {
     content: '';
+}
+
+.text-uppercase {
+    text-transform: uppercase !important;
 }
