feat(commands): automate docker commands with cron
wip(commands): add delete, edit and load functions

wip(commands): exec command endpoint added

wip(commands): add commands cron

wip(commands): run command cron

wip(commands): use command instead of hard coded string

--- a/root/app/www/public/themes/base.css
+++ b/root/app/www/public/themes/base.css
@@ -308,11 +308,28 @@ button.dropdown-item:hover {
     color: var(--primary-500) !important;
 }
 
+.form-check-input:focus {
+    border-color: var(--primary-200);
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(55, 90, 127, 0.25);
+}
+
+.form-check-input:checked {
+    background-color: var(--background-100);
+    border-color: var(--primary-600);
+}
+
 /* Buttons */
 .btn-check:checked + .btn {
     color: var(--text-950) !important;
     background-color: var(--primary-500) !important;
     border-color: var(--background-200) !important;
+}
+
+.btn-outline-primary {
+    color: var(--text-950) !important;
+    /* background-color: var(--background-100) !important; */
+    border-color: var(--background-400) !important;
 }
 
 .btn-outline-light {
