Change how access mode works in the UI from conditionals to classes

--- a/root/app/www/public/css/style.css
+++ b/root/app/www/public/css/style.css
@@ -494,3 +494,7 @@ pre code > span::before {
     outline: none !important;
     border-color: var(--bs-primary);
 }
+
+.access-ro {
+    display: none;
+}
